--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -1,23 +1,27 @@
 name: Automated web scraper
 
 on:
-    schedule:
-        - cron: '0 6 * * *'
+  schedule:
+    - cron: "0 6 * * *"
 
 jobs:
-    web-scraping:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout Repository
-              uses: actions/checkout@v3 # checkout the repository content to github runner
+  web-scraping:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3 # checkout the repository content to github runner
 
-            - name: Set up Python
-              uses: actions/setup-python@v4 # latest actions repo for python
-              with:
-                python-version: '3.9' # install the python version needed
+      - name: Set up Python
+        uses: actions/setup-python@v4 # latest actions repo for python
+        with:
+          python-version: "3.9" # install the python version needed
 
-            - name: Install Dependencies
-              run: pip install -r requirements.txt
+      - name: Install Dependencies
+        run: pip install -r requirements.txt
 
-            - name: Run Web Scraping Script
-              run: python news_crawler_and_email.py
+      - name: Run Web Scraping Script
+        env:
+          FROM: ${{ secrets.FROM }}
+          TO: ${{ secrets.TO }}
+          PASS: ${{ secrets.PASS }}
+        run: python news_crawler_and_email.py
